<!--

  Copyright (C) 2015, Jaguar Land Rover

  This program is licensed under the terms and conditions of the
  Mozilla Public License, version 2.0.  The full text of the
  Mozilla Public License is at https://www.mozilla.org/MPL/2.0/

-->

<resources>
    <string name="app_name">Vehicle Entry</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_quit">Quit</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="lock_icon">&#xf023;</string>
    <string name="unlock_icon">&#xf13e;</string>
    <string name="trunk">pop trunk</string>
    <string name="panic_icon">&#xf027;</string>
    <string name="panic_stop_icon">&#xf028;</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="share">Share</string>
    <string name="change">Modify Key</string>
    <string name="not_connected_car">Connected to car</string>
    <string name="not_auto_unlock">Auto Unlock</string>
    <string name="not_car_disc">Car Discovered : </string>
    <string name="not_car_out_range">Car Out of Range : </string>
    <string name="not_new_key">New Digital Key</string>
    <string name="not_auto_lock">Auto Locked</string>
    <string name="title_activity_key_share">keyShareActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">User:</string>
    <string name="vehicle">Vehicle:</string>
    <string name="share_lbl">Key Sharing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_key_change">keyChangeActivity</string>
    <string name="title_activity_http_example">HttpExampleActivity</string>
    <string name="USERNAME">user</string>
    <string name="USERTYPE">usertype</string>
    <string name="VEHICLE">vehicle</string>
    <string name="LOCK">lock</string>
    <string name="ENGINE">engine</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
