<!--

  Copyright (C) 2015, Jaguar Land Rover

  This program is licensed under the terms and conditions of the
  Mozilla Public License, version 2.0.  The full text of the
  Mozilla Public License is at https://www.mozilla.org/MPL/2.0/

-->
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:weightSum="1"
    style="@style/AppTheme">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userheader"
            android:text="User: "
            android:textSize="20dp"
            android:layout_marginRight="150dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/unlock"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="100sp"
            android:layout_height="175sp"
            android:layout_marginRight="10dp"
            android:text="@string/unlock_icon"
            android:background="@drawable/grey_button"
            android:textSize="100sp"
            android:textColor="#fff"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/start"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/start"
                android:background="@drawable/red_button"
                android:textSize="20sp"
                android:textColor="#fff"
                android:visibility="visible" />

            <Button
                android:id="@+id/stop"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="0dp"
                android:text="@string/stop"
                android:background="@drawable/red_button"
                android:textSize="20sp"
                android:textColor="#fff"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/lock"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="100sp"
            android:layout_height="175sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/lock_icon"
            android:background="@drawable/grey_button"
            android:textSize="100sp"
            android:textColor="#fff"
            android:visibility="visible" />
    </LinearLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:visibility="visible"
    android:id="@+id/demobutton"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <!--android:layout_marginTop="70dp">-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keysharelbl"
            android:text="@string/share_lbl"
            android:textSize="20dp"
            android:layout_marginRight="150dp"/>


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottomlayout"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/share"
            android:layout_column="2"
            android:layout_row="8"
            android:layout_width="115sp"
            android:layout_height="115sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="95dp"
            android:text="@string/share"
            android:background="@drawable/black_button"
            android:textAllCaps="false"
            android:visibility="visible"
            style="@style/black_button_text"
            />

        <Button
            android:id="@+id/change"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_width="115sp"
            android:layout_height="115sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/change"
            android:background="@drawable/black_button"
            android:textAllCaps="false"
            android:visibility="visible"
            style="@style/black_button_text"
            />
    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guestvalidDate"
    android:textSize="50dp"
    android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guestvalidTime"
        android:visibility="gone"/>
    <Button
        android:id="@+id/trunk"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_width="90sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/share"
        android:background="@drawable/black_button"
        android:textAllCaps="false"
        android:visibility="gone"
        style="@style/black_button_text"
        />

    <Button
        android:id="@+id/panic"
        android:layout_width="115sp"
        android:layout_height="115sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/panic_icon"
        android:onClick="sendPanic"
        android:background="@drawable/red_button"
        android:textSize="90sp"
        android:textColor="#fff"
        android:visibility="gone" />

    <Button
        android:id="@+id/panicOn"
        android:layout_width="115sp"
        android:layout_height="115sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/panic_stop_icon"
        android:onClick="sendPanicOff"
        android:background="@drawable/red_button"
        android:textSize="90sp"
        android:textColor="#fff"
        android:visibility="gone" />
    <!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:id="@+id/GridLayout1"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:columnCount="3"
                      android:rowCount="9"
                      android:background="#555"
                      android:orientation="horizontal"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      tools:context=".MainActivity">

            <Button
                android:id="@+id/start"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="0dp"
                android:text="@string/start"
                android:background="@drawable/red_button"
                android:textSize="20sp"
                android:textColor="#fff"
                android:visibility="visible" />

            <Button
                    android:id="@+id/stop"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginTop="0dp"
                    android:text="@string/stop"
                    android:background="@drawable/red_button"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:visibility="visible" />

            <Button
                    android:id="@+id/unlock"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_width="100sp"
                    android:layout_height="140sp"
                    android:layout_marginTop="0dp"
                    android:text="@string/unlock_icon"
                    android:background="@drawable/grey_button"
                    android:textSize="100sp"
                    android:textColor="#fff"
                    android:visibility="visible" />

            <Button
                    android:id="@+id/lock"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_width="100sp"
                    android:layout_height="140sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:text="@string/lock_icon"
                    android:background="@drawable/grey_button"
                    android:textSize="100sp"
                    android:textColor="#fff"
                    android:visibility="visible" />

            <Button
                android:id="@+id/trunk"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/share"
                android:background="@drawable/black_button"
                android:textAllCaps="false"
                android:visibility="gone"
                style="@style/black_button_text"
                />

            <Button
                    android:id="@+id/panic"
                    android:layout_width="115sp"
                    android:layout_height="115sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/panic_icon"
                    android:onClick="sendPanic"
                    android:background="@drawable/red_button"
                    android:textSize="90sp"
                    android:textColor="#fff"
                    android:visibility="gone" />

            <Button
                    android:id="@+id/panicOn"
                    android:layout_width="115sp"
                    android:layout_height="115sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/panic_stop_icon"
                    android:onClick="sendPanicOff"
                    android:background="@drawable/red_button"
                    android:textSize="90sp"
                    android:textColor="#fff"
                    android:visibility="gone" />
            <Button
            android:id="@+id/share"
            android:layout_column="2"
            android:layout_row="8"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/share"
            android:background="@drawable/black_button"
            android:textAllCaps="false"
            android:visibility="visible"
            style="@style/black_button_text"
            />

            <Button
                android:id="@+id/change"
                android:layout_column="0"
                android:layout_row="8"
                android:layout_width="115sp"
                android:layout_height="115sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/change"
                android:background="@drawable/black_button"
                android:textAllCaps="false"
                android:visibility="visible"
                style="@style/black_button_text"
                />
        </GridLayout>-->
</LinearLayout>
